Fix username colors flickering with the dark theme enabled on Twitch whenever the scrollbar appears or disappears.

--- a/src/sites/twitch-twilight/styles/chat.scss
+++ b/src/sites/twitch-twilight/styles/chat.scss
@@ -6,3 +6,7 @@
 .ffz--freeze-indicator {
 	pointer-events: none;
 }
+
+.chat-list__lines .simplebar-scrollbar {
+	will-change: opacity;
+}
